fix: tighten binding promotion provenance classification